@@ -375,6 +375,7 @@ namespace lsp
                 plug::IPort            *pRank;
                 plug::IPort            *pDry;
                 plug::IPort            *pWet;
+                plug::IPort            *pDryWet;
                 plug::IPort            *pRenderThreads;
                 plug::IPort            *pRenderQuality;
                 plug::IPort            *pRenderStatus;
