@@ -230,6 +230,7 @@ This allows to understand the final result with minimum number of actions.</p>
 	<li><b>Pre-delay</b> - amount of pre-delay added to the wet (processed) signal.</li>
 	<li><b>Dry</b> - amount of gain applied to the dry (unprocessed) signal.</li>
 	<li><b>Wet</b> - amount of gain additionally applied to the wet (processed) signal.</li>
+	<li><b>Dry/Wet</b> - the balance between unprocessed (Dry) signal and mixed signal (see Dry and Wet controls).</li>
 	<li><b>Output</b> - amount of gain additionally applied to the output signal.</li>
 </ul>
 
