@@ -339,6 +339,7 @@ namespace lsp
             pRank           = NULL;
             pDry            = NULL;
             pWet            = NULL;
+            pDryWet         = NULL;
             pRenderThreads  = NULL;
             pRenderQuality  = NULL;
             pRenderStatus   = NULL;
@@ -594,6 +595,7 @@ namespace lsp
 
             BIND_PORT(pDry);
             BIND_PORT(pWet);
+            BIND_PORT(pDryWet);
             BIND_PORT(pOutGain);
 
             BIND_PORT(pRenderThreads);
@@ -822,12 +824,15 @@ namespace lsp
 
         void room_builder::update_settings()
         {
-            float out_gain      = pOutGain->value();
-            float dry_gain      = pDry->value() * out_gain;
-            float wet_gain      = pWet->value() * out_gain;
-            bool bypass         = pBypass->value() >= 0.5f;
-            float predelay      = pPredelay->value();
-            size_t rank         = get_fft_rank(pRank->value());
+            const float out_gain    = pOutGain->value();
+            const float dry         = pDry->value() * out_gain;
+            const float wet         = pWet->value() * out_gain;
+            const float drywet      = pDryWet->value() * 0.01f;
+            const float dry_gain    = dry * drywet + 1.0f - drywet;
+            const float wet_gain    = wet * drywet;
+            const bool bypass       = pBypass->value() >= 0.5f;
+            const float predelay    = pPredelay->value();
+            const size_t rank       = get_fft_rank(pRank->value());
 
             // Adjust FFT rank
             if (rank != nFftRank)
